Add a Criminal Input Model

--- a/BountyHunters.Web.ViewModels/BountyHunters.Web.ViewModels.csproj
+++ b/BountyHunters.Web.ViewModels/BountyHunters.Web.ViewModels.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BountyHunters.Common\BountyHunters.Common.csproj" />
+  </ItemGroup>
+
 </Project>
